--- a/src/styles/partials/section-video.scss
+++ b/src/styles/partials/section-video.scss
@@ -1,5 +1,9 @@
 .section-content.video {
     @include span-columns( 9 of 9 );
+
+    margin-top:$section-margin-bottom;
+    margin-bottom: $section-margin-bottom;
+
 }
 
 .full-bleed-video {
